Add Axios library and custom hooks for fetching data from API
- Added Axios library for making HTTP requests
- Created custom hooks for fetching data from the API

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,7 @@
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": [
-    "react",
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["react", "react-hooks", "prettier"],
   "env": {
     "browser": true,
     "node": true,
