Theme added to app and toggle swich

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "prettier"
   ],
   "plugins": ["react", "react-hooks", "prettier"],
   "env": {
@@ -21,7 +24,9 @@
   "rules": {
     "prettier/prettier": "error",
     "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/no-unresolved": "off",
+    "no-unused-vars": "warn"
   },
   "settings": {
     "react": {
