--- a/package.json
+++ b/package.json
@@ -9,19 +9,6 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format:file": "prettier --write"
   },
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.22.3",
-    "styled-components": "6.1.11",
-    "web-vitals": "^2.1.4"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,6 +27,19 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.22.3",
+    "styled-components": "6.1.11",
+    "web-vitals": "^2.1.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -49,6 +49,7 @@
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
